docs: update file index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <header class="hero">
         <div class="main">
             <h1><span class="brand">Yana Atrashkevich</span></h1>
+            <div class="main-image">
+                <img src="img/qfu_0pgROkI.jpg" alt="Selfie" width="162x" height="216px">
+            </div>
         </div>
       </header>
       <main class="main-text">
